--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Application for scoring a volleyball match",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:all": "npm run test:client && npm run test:server",
+    "test:client": "NODE_PATH=$NODE_PATH:client NODE_ENV=test mocha --require babel-register --recursive test/client",
+    "test:server": "NODE_PATH=$NODE_PATH:server NODE_ENV=test mocha --require babel-register --recursive test/server"
   },
   "repository": {
     "type": "git",
@@ -21,5 +24,14 @@
   "bugs": {
     "url": "https://github.com/exacs/volleyball/issues"
   },
-  "homepage": "https://github.com/exacs/volleyball#readme"
+  "homepage": "https://github.com/exacs/volleyball#readme",
+  "devDependencies": {
+    "babel-plugin-istanbul": "^2.0.3",
+    "babel-register": "^6.18.0",
+    "chai": "^3.5.0",
+    "mocha": "^3.1.2"
+  },
+  "dependencies": {
+    "babel-preset-es2015": "^6.18.0"
+  }
 }
