--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Application for scoring a volleyball match",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean:cov": "rimraf coverage",
+    "test": "nyc --require babel-register --reporter=html --reporter=lcov --reporter=text-lcov npm run test:all",
     "test:all": "npm run test:client && npm run test:server",
     "test:client": "NODE_PATH=$NODE_PATH:client NODE_ENV=test mocha --require babel-register --recursive test/client",
-    "test:server": "NODE_PATH=$NODE_PATH:server NODE_ENV=test mocha --require babel-register --recursive test/server"
+    "test:server": "NODE_PATH=$NODE_PATH:server NODE_ENV=test mocha --require babel-register --recursive test/server",
+    "ci:cov": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -26,12 +28,14 @@
   },
   "homepage": "https://github.com/exacs/volleyball#readme",
   "devDependencies": {
-    "babel-plugin-istanbul": "^2.0.3",
     "babel-register": "^6.18.0",
     "chai": "^3.5.0",
     "mocha": "^3.1.2"
   },
   "dependencies": {
-    "babel-preset-es2015": "^6.18.0"
+    "babel-preset-es2015": "^6.18.0",
+    "coveralls": "^2.11.15",
+    "nyc": "^8.4.0",
+    "rimraf": "^2.5.4"
   }
 }
