--- a/package.json
+++ b/package.json
@@ -4,7 +4,16 @@
   "description": "Application for scoring a volleyball match",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "npm run clean:client && npm run clean:server",
+    "clean:client": "rimraf public/build",
+    "clean:server": "rimraf build.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm run build:client && npm run build:server",
+    "start": "NODE_ENV=production node build.js",
+    "start:dev": "NODE_ENV=development node index.dev.js",
+    "build:client": "NODE_ENV=production webpack --config webpack.config.client.js --progress --color --bail",
+    "build:server": "NODE_ENV=production webpack --config webpack.config.server.js --progress --color --bail",
+    "postinstall": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -21,5 +30,18 @@
   "bugs": {
     "url": "https://github.com/exacs/volleyball/issues"
   },
-  "homepage": "https://github.com/exacs/volleyball#readme"
+  "homepage": "https://github.com/exacs/volleyball#readme",
+  "devDependencies": {
+    "rimraf": "^2.5.4",
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-hot-middleware": "^2.13.2"
+  },
+  "dependencies": {
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "express": "^4.14.0",
+    "lodash": "^4.17.0",
+    "webpack": "^2.1.0-beta.26"
+  }
 }
