--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "webpack-hot-middleware": "^2.13.2"
   },
   "dependencies": {
+    "babel-core": "^6.18.2",
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
