--- a/package.json
+++ b/package.json
@@ -54,9 +54,13 @@
     "babel-preset-react": "^6.16.0",
     "chai": "^3.5.0",
     "coveralls": "^2.11.15",
+    "css-loader": "^0.25.0",
     "express": "^4.14.0",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "lodash": "^4.17.0",
+    "node-sass": "^3.12.2",
     "nyc": "^8.4.0",
+    "sass-loader": "^4.0.2",
     "webpack": "^2.1.0-beta.26"
   }
 }
