--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "lodash": "^4.17.0",
     "node-sass": "^3.12.2",
     "nyc": "^8.4.0",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "sass-loader": "^4.0.2",
     "webpack": "^2.1.0-beta.26"
   }
