--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "sass-loader": "^4.0.2",
+    "socket.io": "^1.5.1",
+    "socket.io-client": "^1.5.1",
     "webpack": "^2.1.0-beta.26"
   }
 }
