--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:all": "npm run test:client && npm run test:server",
     "test:client": "NODE_PATH=$NODE_PATH:client NODE_ENV=test mocha --require babel-register --recursive test/client",
     "test:server": "NODE_PATH=$NODE_PATH:server NODE_ENV=test mocha --require babel-register --recursive test/server",
+    "lint": "eslint app server client",
     "postinstall": "npm run build",
     "ci:cov": "nyc report --reporter=text-lcov | coveralls"
   },
@@ -42,6 +43,11 @@
   "devDependencies": {
     "babel-register": "^6.18.0",
     "chai": "^3.5.0",
+    "eslint": "^3.10.2",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-promise": "^3.3.2",
+    "eslint-plugin-react": "^6.7.1",
+    "eslint-plugin-standard": "^2.0.1",
     "mocha": "^3.1.2",
     "rimraf": "^2.5.4",
     "webpack-dev-middleware": "^1.8.4",
