--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "nodemon": "^1.11.0",
     "react-hot-loader": "^3.0.0-beta.6",
     "rimraf": "^2.5.4",
+    "style-loader": "^0.13.1",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-hot-middleware": "^2.13.2"
   },
