--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
     "nyc": "^8.4.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-redux": "^4.4.6",
+    "redux": "^3.6.0",
     "sass-loader": "^4.0.2",
     "socket.io": "^1.5.1",
     "socket.io-client": "^1.5.1",
