--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "chai": "^3.5.0",
+    "classnames": "^2.2.5",
     "coveralls": "^2.11.15",
     "css-loader": "^0.25.0",
     "express": "^4.14.0",
