--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "babel-register": "^6.18.0",
     "chai": "^3.5.0",
     "deep-freeze": "0.0.1",
+    "enzyme": "^2.6.0",
     "eslint": "^3.10.2",
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.3.2",
