--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-standard": "^2.0.1",
     "mocha": "^3.1.2",
     "nodemon": "^1.11.0",
+    "react-addons-test-utils": "^15.4.1",
     "react-hot-loader": "^3.0.0-beta.6",
     "rimraf": "^2.5.4",
     "sinon": "^1.17.6",
